# seqn

./: CHANGELOG.md  README.md  cabal.project  seqn.cabal
.github/workflows/: haskell-ci.yml
bench/: Main.hs  README.md  bench.cabal
bench/result/: result.csv
src/Data/Seqn/: MSeq.hs  PQueue.hs  Seq.hs
src/Data/Seqn/Internal/: KMP.hs  MSeq.hs  MTree.hs  PQueue.hs  Seq.hs  Stream.hs  Tree.hs  Util.hs
test/: ListExtra.hs  ListLikeTests.hs  MSeq.hs  Main.hs  PQueue.hs  Seq.hs  TestUtil.hs
