cabal-version:      3.0
name:               bench
version:            0.1.0.0

common warnings
    ghc-options: -Wall -Wunused-packages

benchmark seqn-bench
    import: warnings

    main-is: Main.hs

    build-depends:
        base
      , containers
      , deepseq
      , fingertree
      , indexed-traversable
      , pqueue
      , rrb-vector
      , seqn
      , tasty-bench

    ghc-options: -fproc-alignment=64

    hs-source-dirs: .
    default-language: Haskell2010
    type: exitcode-stdio-1.0
